# omni

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  omni.h  omni_config.h  omni_kconfig.h  omni_version.h
boards/: Kconfig
boards/apm/apm32f405rg/: Kconfig
boards/apm/apm32f407ig/: Kconfig  Kconfig.i2c  Kconfig.uart
boards/st/stm32f407ig/: Kconfig  Kconfig.cli
cmsis/: CMakeLists.txt
cmsis/cortex_m/: CMakeLists.txt
components/: CMakeLists.txt  Kconfig
components/command/: CMakeLists.txt  Kconfig  command.c  command.cpp  command.h
components/ring_buffer/: CMakeLists.txt  Kconfig  ring_buffer.c  ring_buffer.h
drivers/: CMakeLists.txt  Kconfig  assert.h
drivers/cli/: Kconfig  Kconfig.shell  cli.c  cli.h  cli_config.h
drivers/gpio/: Kconfig  gpio.c  gpio.h
drivers/include/: cli.h  digital.h  i2c.h  omni_digital.h  omni_i2c.h  omni_serial.h  omni_shell.h  omni_spi.h  serial.h  spi.h
drivers/source/: cli.cpp  digital.cpp  i2c.cpp  omni_digital.cpp  omni_i2c.cpp  omni_serial.cpp  omni_spi.cpp  serial.cpp  spi.cpp
drivers/uart/: Kconfig  uart.c  uart.h
drivers/usbd/: CMakeLists.txt
hal/: CMakeLists.txt  cli_hal.h  cli_types.h  common.h  device.h  gpio_hal.h  gpio_types.h  i2c_hal.h  serial_hal.h  spi_hal.h  uart_hal.h  uart_types.h
hal/include/: gpio_hal.h  i2c_hal.h  omni_common.h  serial_hal.h  spi_hal.h
hal/source/: omni_common.c
libraries/: CMakeLists.txt  Kconfig
platform/: omni_assert.h  platform.h
targets/: CMakeLists.txt  Kconfig  cli_hal.c  device.h
targets/apm/: CMakeLists.txt
targets/apm/apm32f4/: CMakeLists.txt  omni_target.h  target.h
targets/apm/apm32f4/apm32dal_fw/: CMakeLists.txt
targets/apm/apm32f4/apm32f405xx/: CMakeLists.txt
targets/apm/apm32f4/apm32f405xx/target_f405rg/: CMakeLists.txt  omni_board.h
targets/apm/apm32f4/apm32f405xx/toolchain/gcc/: startup_apm32f405xx.s
targets/apm/apm32f4/apm32f407xx/: CMakeLists.txt
targets/apm/apm32f4/apm32f407xx/target_f407ig/: CMakeLists.txt  omni_board.h
targets/stm/: CMakeLists.txt  cli_hal.c  device.h  gpio_hal.c  i2c_hal.c  serial_hal.c  spi_hal.c  uart_hal.c
targets/stm/stm32f4/: CMakeLists.txt  omni_target.h  targets.h
targets/stm/stm32f4/stm32cube_fw/: CMakeLists.txt
targets/stm/stm32f4/stm32cubef4_fw/: CMakeLists.txt
targets/stm/stm32f4/stm32f405xg/: CMakeLists.txt
targets/stm/stm32f4/stm32f405xg/target_f405rg/: CMakeLists.txt  omni_board.c
targets/stm/stm32f4/stm32f405xg/target_mcstools/: CMakeLists.txt  omni_board.h
targets/stm/stm32f4/stm32f405xg/toolchain/gcc/: stm32f405xg_flash.ld
targets/stm/stm32f4/stm32f405xx/: CMakeLists.txt
targets/stm/stm32f4/stm32f405xx/target_f405rg/: CMakeLists.txt  omni_board.c
targets/stm/stm32f4/stm32f405xx/target_mcstools/: CMakeLists.txt
targets/stm/stm32f4/stm32f407xg/: CMakeLists.txt
targets/stm/stm32f4/stm32f407xg/target_f407ig/: CMakeLists.txt  omni_board.h
targets/stm/stm32f4/stm32f407xg/toolchain/gcc/: stm32f407xg_flash.ld
targets/stm/stm32f4/stm32f407xx/: CMakeLists.txt
targets/stm/stm32f4/stm32f407xx/target_f407ig/: CMakeLists.txt  omni_board.c  omni_board.h
targets/stm/stm32f4/stm32f407xx/toolchain/gcc/: stm32f407xg_flash.ld  stm32f407xg_ram.ld
test/: project.yml
tests/: CMakeLists.txt  project.yml
tests/test/: test_gpio.c
tools/cmake/: omni_get_arm_gcc_version.cmake  omni_get_subdirectories.cmake  omni_set_linker_script.cmake
tools/python/: update_cmake_omni_setting.py
utilities/: CMakeLists.txt
utilities/command/: CMakeLists.txt  command.cpp  command.h  omni_command.cpp  omni_command.h
utilities/ring_buffer/: CMakeLists.txt  ring_buffer.h
